Se maqueto la seccion about

--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -1,1 +1,44 @@
-<p>about works!</p>
+<section class="section about">
+    <div class="container">
+        <div class="section-box">
+            <div class="about-title">
+                <h3 class="e-font section-title">
+                    <span class='code-font n-section-title'>01.</span> Acerca de mi
+                </h3>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <div class="about-description">
+                        <p>
+                            ¡Hola! Soy José Hernández, web developer en Monagas, VE.
+                        </p>
+                        <p>
+                            Disfruto cada dia mi trabajo como desarrollador brindando soluciones tecnologicas de cualquier tipo, desde paginas web, aplicaciones web y bots para slack, telegram o whatsapp para automatizacion de procesos.
+                        </p>
+                        <p>
+                            Acutalmente me encuentro estudiando Ingeneria de Sistemas en la IUP Santiago Mariño. Mas alla de mis estudios universitarios, mi pasion por la programacion me ha impulsado a capacitarme de manera autodidacta en tecnologías y procedimientos que usualmente
+                            no enseñan en las universidades regulares
+                        </p>
+                        <p>
+                            Algunas de las tecnologías en las que me he capacitado y trabajado incluyen (pero no se limitan) a:
+                        </p>
+                        <ul class="skills-list">
+                            <li class="skill-element">JavaScript (ES6+)</li>
+                            <li class="skill-element">HTML &amp; (S)CSS</li>
+                            <li class="skill-element">Angular</li>
+                            <li class="skill-element">Laravel</li>
+                            <li class="skill-element">Node.js</li>
+                            <li class="skill-element">WordPress</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-6 text-center">
+                    <div class="about-img-container">
+                        <img class="rounded" width="300" height="300" src="assets/images/me.jpg" alt="José Andrés">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
