--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -1,6 +1,6 @@
-<section class="banner">
+<section class="section banner mt-5">
     <div class="container">
-        <div class="banner-box">
+        <div class="section-box">
             <div>
                 <h1>Hola, mi nombre es</h1>
             </div>
