Se maqueto la tercera seccion del home

--- a/src/app/components/general/footer/footer.component.css
+++ b/src/app/components/general/footer/footer.component.css
@@ -25,6 +25,7 @@ footer .footer-left-bar:after, footer .footer-right-bar:after{
 
 footer .footer-left-bar i{
     font-size: 19px;
+    color: #a8b2d1;
 }
 footer .footer-left-bar li{
     margin: 20px 0px;
