Se termino de maquetar el home version desktop

--- a/src/app/components/home/contact/contact.component.html
+++ b/src/app/components/home/contact/contact.component.html
@@ -1,1 +1,16 @@
-<p>contact works!</p>
+<section class="section contact">
+    <div class="container">
+        <div class="section-box">
+            <div class="about-title mb-4">
+                <h3 class="contact-pre-title">05. Y... ¿Ahora?</h3>
+                <h4 class="e-font contact-title">
+                    ¡Saludame!
+                </h4>
+            </div>
+            <p>Although I'm not currently looking for any new opportunities, my inbox is always open. Whether you have a question or just want to say hi, I'll try my best to get back to you!</p>
+            <a href="mailto:joseandreshernandezross@gmail.com" target="_blank" class="contact-btn">
+                Say Hello
+            </a>
+        </div>
+    </div>
+</section>
