--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -1,1 +1,86 @@
-<p>proyects works!</p>
+<section class="section about">
+    <div class="container">
+        <div class="section-box">
+            <div class="about-title">
+                <h3 class="e-font section-title">
+                    <span class='code-font n-section-title'>03.</span> Algunos proyectos que he realizado
+                </h3>
+            </div>
+            
+            <div class="d-flex proyect-container">
+                <div>
+                    <img src="https://dummyimage.com/600x360/000/fff" alt="">
+                </div>
+                <div class="proyect-info-right h-100">
+                    <div class="proyect-box">
+                            <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
+                            <h5 class="text-right proyect-name">Proyeto 1</h5>
+
+                            <div class="proyect-description-box">
+                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime at soluta itaque, numquam quis debitis deserunt voluptatibus? Reprehenderit nisi alias vitae omnis, quo necessitatibus odit temporibus nobis? </p>
+                            </div>
+                            <ul class="proyect-skills justify-content-end">
+                                <li class="ml-3">Next.js</li>
+                                <li class="ml-3">Chart.js</li>
+                                <li class="ml-3">GitHub API</li>
+                            </ul>
+                            <div class="proyect-links text-right">
+                                <i class="ml-3 fab fa-github"></i>
+                                <i class="ml-3 fas fa-external-link-alt"></i>
+                            </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="d-flex proyect-container">
+                <div class="proyect-info-left h-100">
+                    <div class="proyect-box">
+                            <h4 class="text-left feature-proyect">Proyecto Destacado</h4>
+                            <h5 class="text-left proyect-name">Proyeto 1</h5>
+
+                            <div class="proyect-description-box">
+                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime at soluta itaque, numquam quis debitis deserunt voluptatibus? Reprehenderit nisi alias vitae omnis, quo necessitatibus odit temporibus nobis? </p>
+                            </div>
+                            <ul class="proyect-skills justify-content-star">
+                                <li class="mr-3">Next.js</li>
+                                <li class="mr-3">Chart.js</li>
+                                <li class="mr-3">GitHub API</li>
+                            </ul>
+                            <div class="proyect-links text-left">
+                                <i class="mr-3 fab fa-github"></i>
+                                <i class="mr-3 fas fa-external-link-alt"></i>
+                            </div>
+                    </div>
+                </div>
+                <div>
+                    <img src="https://dummyimage.com/600x360/000/fff" alt="">
+                </div>
+            </div>
+            
+            <div class="d-flex proyect-container">
+                <div>
+                    <img src="https://dummyimage.com/600x360/000/fff" alt="">
+                </div>
+                <div class="proyect-info-right h-100">
+                    <div class="proyect-box">
+                            <h4 class="text-right feature-proyect">Proyecto Destacado</h4>
+                            <h5 class="text-right proyect-name">Proyeto 1</h5>
+
+                            <div class="proyect-description-box">
+                                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime at soluta itaque, numquam quis debitis deserunt voluptatibus? Reprehenderit nisi alias vitae omnis, quo necessitatibus odit temporibus nobis? </p>
+                            </div>
+                            <ul class="proyect-skills justify-content-end">
+                                <li class="ml-3">Next.js</li>
+                                <li class="ml-3">Chart.js</li>
+                                <li class="ml-3">GitHub API</li>
+                            </ul>
+                            <div class="proyect-links text-right">
+                                <i class="ml-3 fab fa-github"></i>
+                                <i class="ml-3 fas fa-external-link-alt"></i>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
