--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -22,6 +22,16 @@
         </li>
     </ul>
     <div class="footer-right-bar">
-            <a href="#" target='_blank'> joseandreshernandezross@gmail.com </a>
+        <a href="#" target='_blank'> joseandreshernandezross@gmail.com </a>
     </div>
+
+    <div class="footer-credits text-center">
+        <a href="https://github.com/bchiang7/v4" target="_blank" rel="nofollow noopener noreferrer">
+            <div>Built with Angular by Jose Andres</div>
+        </a>
+        <a href="https://github.com/bchiang7/v4" target="_blank" rel="nofollow noopener noreferrer">
+            <div class="mt-2">Designed by Brittany Chiang</div>
+        </a>
+    </div>
+
 </footer>
